Issue 2604 Twenty Nineteen Backend Container Alignment
- Twenty Nineteen was adding a weird left value for the container. Made it auto.
- Tested if changing container position work from the transform option, and it does. Also it works on other themes.
- Twenty Twenty Two has a similar issue. Should I also fix it here, or in a new PR?

--- a/src/css/maxi-themes-banner.scss
+++ b/src/css/maxi-themes-banner.scss
@@ -42,3 +42,8 @@ body.maxi-blocks--active .maxi-button-block__button {
 	border: none;
 	text-decoration: none;
 }
+
+/*Fixes container alignment for Twenty Nineteen*/
+body.maxi-blocks--active .maxi-container-block.wp-block.maxi-block.maxi-block--backend {
+	left: auto;
+}
